bug: i hope this fixes my bug

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://coded1guy.github.io/hng9-task-un",
+  "homepage": "https://coded1guy.github.io/hng9-task-un",
   "name": "hng9-task-un",
   "version": "0.1.0",
   "private": true,
